add CPU cores config options

--- a/common/scala/src/main/resources/application.conf
+++ b/common/scala/src/main/resources/application.conf
@@ -365,6 +365,14 @@ whisk {
         std = 256 m
     }
 
+    # action cpu configuration
+    cpu {
+        control-enabled = false
+        min = 0.1
+        max = 1.0
+        std = 0.2
+    }
+
     # action log-limit configuration
     log-limit {
         min = 0 m
